# life

./: .clang-format  CMakeLists.txt  README.md  main.cpp
.github/workflows/: codeql-analysis.yml  devskim-analysis.yml  msvc-analysis.yml
